--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:orientation="horizontal">
         <ImageView
             android:layout_width="wrap_content"
@@ -19,34 +19,37 @@
             android:src="@drawable/avatar"
             android:paddingRight="10dp"/>
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center_vertical"
+            >
+            <EditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/name"/>
-            <TextView
-                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:id="@+id/textName"/>
+            <EditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/age"/>
-            <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/textAge"
+                android:layout_weight="1"/>
+            <EditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/address" />
+                android:id="@+id/textAddress"
+                android:layout_weight="1"/>
         </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Gender"/>
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:id="@+id/radioGender">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Gender"/>
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,8 +59,6 @@
                 android:layout_height="wrap_content"
                 android:text="@string/male"/>
         </RadioGroup>
-    </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -104,15 +105,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center">
+        android:gravity="center_horizontal">
         <Button
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="@string/save"/>
+            android:text="@string/save"
+            android:id="@+id/btnSave"/>
         <Button
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="@string/clear"/>
+            android:text="@string/clear"
+            android:id="@+id/btnClear"/>
     </LinearLayout>
 
 </LinearLayout>
